test_output.txt
> Task :compileJava UP-TO-DATE
> Task :processResources UP-TO-DATE
> Task :classes UP-TO-DATE

> Task :compileTestJava FAILED
C:\Users\roman\OneDrive\Escritorio\IntegradoDSFRomanMolina51202\src\test\java\org\example\controller\MutantControllerTest.java:20: error: duplicate class: org.example.controller.MutantControllerTest
class MutantControllerTest {
^
C:\Users\roman\OneDrive\Escritorio\IntegradoDSFRomanMolina51202\src\test\java\org\example\controller\StatsControllerTest.java:18: error: duplicate class: org.example.controller.StatsControllerTest
class StatsControllerTest {
^
2 errors

[Incubating] Problems report is available at: file:///C:/Users/roman/OneDrive/Escritorio/IntegradoDSFRomanMolina51202/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  C:\Users\roman\OneDrive\Escritorio\IntegradoDSFRomanMolina51202\src\test\java\org\example\controller\MutantControllerTest.java:20: error: duplicate class: org.example.controller.MutantControllerTest
  class MutantControllerTest {
  ^
  C:\Users\roman\OneDrive\Escritorio\IntegradoDSFRomanMolina51202\src\test\java\org\example\controller\StatsControllerTest.java:18: error: duplicate class: org.example.controller.StatsControllerTest
  class StatsControllerTest {
  ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 3s
3 actionable tasks: 1 executed, 2 up-to-date
